--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <html>
-    <title> J.C.'s Web Page (WIP)</title>
+    
 <head>
-    <body>
-
-    </body>
+    <title> J.C.'s Web Page (WIP)</title>
+    <meta charset="UTF-8">
+    <meta name= "Description" content = "Info about my page">
+    <meta name = "Author" content = "Juan Pina-Sanz"
 </head>
+
+<body>
+
+</body>
 </html>
