--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title> J.C.'s Web Page (WIP)</title>
     <meta charset="UTF-8">
     <meta name= "Description" content = "Info about my page">
-    <meta name = "Author" content = "Juan Pina-Sanz"
+    <meta name = "Author" content = "Juan Pina-Sanz"> 
 </head>
 
 <body>
