--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <html>
-    
+
 <head>
     <title> J.C.'s Web Page (WIP)</title>
     <meta charset="UTF-8">
-    <meta name= "Description" content = "Info about my page">
-    <meta name = "Author" content = "Juan Pina-Sanz"> 
+    <meta name="Description" content="Info about my page">
+    <meta name="Author" content="Juan Pina-Sanz">
 </head>
 
 <body>
+    <h1> Welcome to my Page</h1>
 
 </body>
+
 </html>
