--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 
 <body>
-    <h1> Welcome to my Page</h1>
+    <h1> Welcome to my GitHub Career Page!</h1>
 
+    <p>here will showcase and demonstrate my career in a way that a resume and a LinkedIn cannot!</p>
 </body>
 
 </html>
