testing resume button

--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
     <meta charset="UTF-8">
     <meta name="Description" content="Info about my page">
     <meta name="Author" content="Juan Pina-Sanz">
+    <!--Load external libraries here-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-------------------------------->
+    <!--Scripts-->
+    $(document).ready(function(){ $("download resume").click(function(){ alert("You've downloaded my resume!"); }); });
+    <!----------->
 </head>
 
 <body>
     <h1> Welcome to my GitHub Career Page!</h1>
 
     <p>here will showcase and demonstrate my career in a way that a resume and a LinkedIn cannot!</p>
+    <button>Download My Resume</button>
 </body>
 
 </html>
