--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-------------------------------->
     <!--Scripts-->
-    <!--$(document).ready(function(){ $("download resume").click(function(){ alert("You've downloaded my resume!"); }); });-->
+    <script>
+        $(document).ready(function() {
+            $("download resume").click(function() {
+                alert("You've downloaded my resume!");
+            });
+        });
+    </script>
     <!----------->
 </head>
 
