--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -22,7 +23,7 @@
 <body>
     <h1> Welcome to my GitHub Career Page!</h1>
 
-    <p>here will showcase and demonstrate my career in a way that a resume and a LinkedIn cannot!</p>
+    <p>Here will showcase and demonstrate my career in a way that a resume and a LinkedIn cannot!</p>
     <button>Download My Resume</button>
 </body>
 
