testing resume button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--Scripts-->
     <script>
         $(document).ready(function() {
-            $("resume button").click(function() {
+            $("#resume_button").click(function() {
                 alert("You've downloaded my resume!");
             });
         });
@@ -24,7 +24,7 @@
     <h1> Welcome to my GitHub Career Page!</h1>
 
     <p>Here will showcase and demonstrate my career in a way that a resume and a LinkedIn cannot!</p>
-    <button id="resume button">Download My Resume</button>
+    <button id="resume_sbutton">Download My Resume</button>
 </body>
 
 </html>
