--- a/index.html
+++ b/index.html
@@ -17,15 +17,12 @@
             });
         });
     </script>
-    
+
 </head>
 
 <body>
     <h1> Welcome to my GitHub Career Page!</h1>
-    <p>
-    	<img src"pictures/me.jpg"/>
-    <\p>
-
+    <img src="pictures/me.jpg"></p>img>
     <p>Here will showcase and demonstrate my career in a way that a resume and a LinkedIn cannot!</p>
     <button id="resume_sbutton">Download My Resume</button>
 </body>
