picture links to wowhead

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 
 <body>
     <h1> Welcome to my GitHub Career Page!</h1>
-    <img src="pictures/me.jpg" width="600" height="300"></img>
+    <a href="https://www.wowhead.com/">
+        <img src="pictures/me.jpg" width="600" height="300"></img>
+    </a>
     <p>Here will showcase and demonstrate my career in a way that a resume and a LinkedIn cannot!</p>
     <button id="resume_sbutton">Download My Resume</button>
 </body>
