--- a/index.html
+++ b/index.html
@@ -6,27 +6,18 @@
     <meta charset="UTF-8">
     <meta name="Description" content="Info about my page">
     <meta name="Author" content="Juan Pina-Sanz">
-    <!--Load external libraries here-->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <!-------------------------------->
-    <!--Scripts-->
-    <script>
-        $(document).ready(function() {
-            $("#resume_button").click(function() {
-                alert("You've downloaded my resume!");
-            });
-        });
-    </script>
-
 </head>
 
 <body>
+    <header>
+        <p> Welcome to my GitHub Page</p>
+
+    </header>
     <h1> Welcome to my GitHub Career Page!</h1>
-    <a href="https://www.wowhead.com/">
-        <img src="pictures/me.jpg" width="600" height="300"></img>
-    </a>
     <p>Here will showcase and demonstrate my career in a way that a resume and a LinkedIn cannot!</p>
-    <button id="resume_sbutton">Download My Resume</button>
+
+    <!--Load external libraries here-->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </body>
 
 </html>
