--- a/index.html
+++ b/index.html
@@ -2,22 +2,51 @@
 <html>
 
 <head>
-    <title> J.C.'s Web Page (WIP)</title>
+    <title> J.C.'s Career page</title>
     <meta charset="UTF-8">
     <meta name="Description" content="Info about my page">
-    <meta name="Author" content="Juan Pina-Sanz">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-    <header>
-        <p> Welcome to my GitHub Page</p>
-
+    <header class="nav-header">
+        <nav id="nav-bar" class="navbar navbar-default">
+            <div class="container">
+                <div class="navbar-header">
+                    <div class="navbar-brand">
+                        <p class="nav-brand nav-title">J.C.'s Career Page</p>
+                    </div>
+                    <ul class="nav justify-content-end">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About Me</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">My Education</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">My Career</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Projects</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
-    <h1> Welcome to my GitHub Career Page!</h1>
-    <p>Here will showcase and demonstrate my career in a way that a resume and a LinkedIn cannot!</p>
 
-    <!--Load external libraries here-->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <div class="row content-box container container-fluid" id="content-body">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+            dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+    </div>
+    <div class="row container container-fluid" id="content-img">
+        <img </div>
+
+
+        <!--Load external libraries here-->
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </body>
 
 </html>
