--- a/index.html
+++ b/index.html
@@ -36,17 +36,19 @@
         </nav>
     </header>
 
-    <div class="row content-box container container-fluid" id="content-body">
+    <div class="row content-box container container-fluid">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
             dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
     </div>
-    <div class="row container container-fluid" id="content-img">
-        <img </div>
-
-
-        <!--Load external libraries here-->
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <div class="row image-box container container-fluid">
+        <div>
+            <img src="images/sample-img.jpg" class="img-fluid" height=auto max-width="100%" ">
+        </div>
+        <div> Image Caption</div>
+    </div>
+    <!--Load external libraries here-->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js "></script>
 </body>
 
 </html>
