updated about me

--- a/index.html
+++ b/index.html
@@ -12,22 +12,25 @@
 <body>
     <header class="nav-header">
         <nav id="nav-bar" class="navbar navbar-default">
-            <div class="container">
+            <div class="d-flex container">
                 <div class="navbar-header">
                     <div class="navbar-brand">
                         <p class="nav-brand nav-title">J.C.'s Career Page</p>
                     </div>
-                    <ul class="nav justify-content-end">
-                        <li class="nav-item">
+                </div>
+                <!--Navbar Links Left to Right-->
+                <div class="justify-content-start">
+                    <ul class="nav">
+                        <li class="nav-item nav-bar-link">
                             <a class="nav-link" href="#">About Me</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item nav-bar-link">
                             <a class="nav-link" href="#">My Education</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item nav-bar-link">
                             <a class="nav-link" href="#">My Career</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item nav-bar-link">
                             <a class="nav-link" href="#">Projects</a>
                         </li>
                     </ul>
@@ -37,13 +40,13 @@
     </header>
 
     <div class="row content-box container container-fluid">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-            dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <p class="content-box-text"> I am a fresh graduate of Computer Science from San Diego State University. I have a passion for software development and a desire to build applications that help people and grow business. Through my work experiences and academic pursuits, I have
+            developed strong team-based skills and a proficiency to lead and mentor others. My career goal is to grow and work as a software
         </p>
     </div>
     <div class="row image-box container container-fluid">
         <div>
-            <img src="images/sample-img.jpg" class="img-fluid" height=auto max-width="100%" ">
+            <img src="images/sample-img.jpg" class="img-fluid" height=auto max-width="80%" ">
         </div>
         <div> Image Caption</div>
     </div>
