added other pages to be filled in

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
                 <div class="justify-content-start">
                     <ul class="nav">
                         <li class="nav-item nav-bar-link">
-                            <a class="nav-link" href="#">About Me</a>
+                            <a class="nav-link" href="/aboutme.html">About Me</a>
                         </li>
                         <li class="nav-item nav-bar-link">
-                            <a class="nav-link" href="#">My Education</a>
+                            <a class="nav-link" href="/education.html">My Education</a>
                         </li>
                         <li class="nav-item nav-bar-link">
-                            <a class="nav-link" href="#">My Career</a>
+                            <a class="nav-link" href="/career.html">My Career</a>
                         </li>
                         <li class="nav-item nav-bar-link">
-                            <a class="nav-link" href="#">Projects</a>
+                            <a class="nav-link" href="projects.html">Projects</a>
                         </li>
                     </ul>
                 </div>
@@ -39,11 +39,13 @@
         </nav>
     </header>
 
+    <!--Main Content Box for Landing Page-->
     <div class="row content-box container container-fluid">
         <p class="content-box-text"> I am a fresh graduate of Computer Science from San Diego State University. I have a passion for software development and a desire to build applications that help people and grow business. Through my work experiences and academic pursuits, I have
             developed strong team-based skills and a proficiency to lead and mentor others. My career goal is to grow and work as a software
         </p>
     </div>
+    <!--Image Box-->
     <div class="row image-box container container-fluid">
         <div>
             <img src="images/sample-img.jpg" class="img-fluid" height=auto max-width="80%" ">
