--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title> J.C.'s Career page</title>
+    <title> My Projects</title>
     <meta charset="UTF-8">
     <meta name="Description" content="Info about my page">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -15,7 +15,9 @@
             <div class="d-flex container">
                 <div class="navbar-header">
                     <div class="navbar-brand">
-                        <p class="nav-brand nav-title">J.C.'s Career Page</p>
+                        <p class="nav-brand nav-title">
+                            <a class="nav-title" href="/index.html">J.C.'s Career Page
+                            </a></p>
                     </div>
                 </div>
                 <!--Navbar Links Left to Right-->
@@ -31,7 +33,7 @@
                             <a class="nav-link" href="/career.html">My Career</a>
                         </li>
                         <li class="nav-item nav-bar-link">
-                            <a class="nav-link" href="projects.html">Projects</a>
+                            <a class="nav-link" href="projects.html">My Projects</a>
                         </li>
                     </ul>
                 </div>
