--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
             <div class="d-flex container">
                 <div class="navbar-header">
                     <div class="navbar-brand">
-                        <p class="nav-brand nav-title">
+                        <p class="nav-brand">
                             <a class="nav-title" href="/index.html">J.C.'s Career Page
                             </a></p>
                     </div>
