--- a/index.html
+++ b/index.html
@@ -5,58 +5,95 @@
     <title> J.C.'s Career page</title>
     <meta charset="UTF-8">
     <meta name="Description" content="Info about my page">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js "></script>
 </head>
 
 <body>
-    <header class="nav-header">
-        <nav id="nav-bar" class="navbar navbar-default">
-            <div class="d-flex container">
-                <div class="navbar-header">
-                    <div class="navbar-brand">
-                        <p class="nav-brand">
-                            <a class="nav-title" href="/index.html">J.C.'s Career Page
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark" id="nav-bar-style" ">
+            <a class="navbar-brand nav-title nav-link text-white " href="index.html " >
+                J.C.'s Career Page
+            </a>
+        <button class="navbar-toggler " type="button " data-toggle="collapse " data-target="navbarNavDropdown " aria-controls="navbarNavDropdown " aria-expanded="false " aria-label="Toggle navigation ">
+            <span class="navbar-toggler-icon "></span>
+        </button> <!--Navbar Button-->
+
+            <div class="collapse navbar-collapse " id="navbarNavDropdown ">
+                <ul class="navbar-nav ">
+                    <li class="nav-item ">
+                        <a class="nav-link text-white " href="/aboutme.html ">
+                            About Me
+                        </a>
+                    </li>
+                    <!--About Me-->
+
+            <li class="nav-item dropdown ">
+                <a class="nav-link dropdown-toggle text-white " href="education.html " id="EduNavBarDropdownMenuLink " role="button " data-toggle="dropdown " aria-haspopup="true " aria-expanded=" false ">
+            My Education
+            </a>
+            <div class=" dropdown-menu " aria-labelledby="EduNavBarDropdownMenuLink ">
+                <a class="dropdown-item " href="# ">San Diego State University</a>
+                <a class="dropdown-item " href="# ">San Diego Miramar/Mesa College</a>
+            </div>
+            <!--Education Options-->
+            </li>
+            <!--Education-->
+
+            <li class="nav-item dropdown text-white ">
+                <a class="nav-link dropdown-toggle text-white " href="career.html " id="CarNavBarDropdownMenuLink " role="button " data-toggle="dropdown " aria-haspopup="false " aria-expanded="false ">
+                     My Career
+                    </a>
+                <div class="dropdown-menu " aria-labelledby="CarNavBarDropdownMenuLink ">
+                    <a class="dropdown-item " href="# ">San Diego State University: IT Division ServiceNow</a>
+                    <a class="dropdown-item " href="# ">San Diego State University: Instructional Technology Services</a>
+                    <a class="dropdown-item " href="# ">Best Buy Mira Mesa</a>
+                </div>
+                <!--Career Options-->
+            </li>
+            <!--Career-->
+            <li class="nav-item dropdown ">
+                <a class="nav-link dropdown-toggle text-white " href="projects.html " id="ProjNavBarDropdownMenuLink " role="button " data-toggle="dropdown " aria-haspopup="false " aria-expanded="false ">
+                                Projects/Additional Studies
                             </a>
-                        </p>
-                    </div>
+                <div class="dropdown-menu " aria-labelledby="ProjNavBarDropdownMenuLink ">
+                    <a class="dropdown-item " href="# ">Github Webpage</a>
+                    <a class="dropdown-item " href="# ">Coursera Courses</a>
                 </div>
-                <!--Navbar Links Left to Right-->
-                <div class="justify-content-start">
-                    <ul class="nav">
-                        <li class="nav-item nav-bar-link">
-                            <a class="nav-link" href="/aboutme.html">About Me</a>
-                        </li>
-                        <li class="nav-item nav-bar-link">
-                            <a class="nav-link" href="/education.html">My Education</a>
-                        </li>
-                        <li class="nav-item nav-bar-link">
-                            <a class="nav-link" href="/career.html">My Career</a>
-                        </li>
-                        <li class="nav-item nav-bar-link">
-                            <a class="nav-link" href="projects.html">My Projects</a>
-                        </li>
-                    </ul>
-                </div>
+                <!--Project Options-->
+            </li>
+            <!--Projects-->
+            </ul>
+            <!--Navbar List-->
             </div>
         </nav>
+        <!-- End of Navbar-->
     </header>
 
     <!--Main Content Box for Landing Page-->
-    <div class="row content-box container container-fluid">
-        <p class="content-box-text"> I am a fresh graduate of Computer Science from San Diego State University. I have a passion for software development and a desire to build applications that help people and grow business. Through my work experiences and academic pursuits, I have
-            developed strong team-based skills and a proficiency to lead and mentor others. My career goal is to grow and work as a software
-        </p>
-    </div>
-    <!--Image Box-->
-    <div class="row image-box container container-fluid">
-        <div>
-            <img src="images/sample-img.jpg" class="img-fluid" height=auto max-width="80%" ">
+    <div class="row container container-fluid " id="main-content ">
+        <div class="row content-box container container-fluid ">
+            <p class="content-box-text "> I am a fresh graduate of Computer Science from San Diego State University. I have a passion for software development and a desire to build applications that help people and grow business. Through my work experiences and academic pursuits,
+                I have developed strong team-based skills and a proficiency to lead and mentor others. My career goal is to grow and work as a software engineer
+            </p>
         </div>
-        <div> Image Caption</div>
-    </div>
-    <!--Load external libraries here-->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js "></script>
+        <!--Text Box-->
+        <div class="row image-box container container-fluid ">
+            <figure class="figure ">
+                <img src="images/sample-img.jpg " class="figure-img img-fluid rounded " height=auto max-width="80% " ">
+            <figcaption class="figure-caption ">
+                <div class="content-box rounded ">
+                    <p class="content-box-text ">
+                        Image Caption
+                    </p>
+                </div>
+            </figcaption>
+            </figure>
+            </div>
+            <!--Image Box-->
+            </div>
+
 </body>
 
 </html>
