added education page, applied new grid layout for main content pages

--- a/assets/navbarTwo.html
+++ b/assets/navbarTwo.html
@@ -2,25 +2,25 @@
 <nav id="main">
     <ul>
         <li class="home">
-            <a href="/index.html">Home</a>
+            <a class="nav-link" href="../index.html">Home</a>
         </li>
         <li>
-            <a href="/aboutme/index.html">About Me</a>
+            <a class="nav-link" href="../aboutme/aboutme.html">About Me</a>
         </li>
         <!--About Me-->
         <li>
-            <a href="education/education.html">My Education</a>
+            <a class="nav-link" href="../education/education.html">My Education</a>
             <!--Education Options-->
         </li>
         <!--Education-->
         <li>
-            <a href="career.html">
+            <a class="nav-link" href="../career/career.html">
                         My Career</a>
             <!--Career Options-->
         </li>
         <!--Career-->
         <li>
-            <a href="projects.html">Projects/Additional Studies</a>
+        <a class="nav-link" href="../projectsandadditionalstudies/projects.html">Projects/Additional Studies</a>
             <!--Project Options-->
         </li>
         <!--Projects-->
