--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title> J.C.'s Career page</title>
     <meta charset="UTF-8">
     <meta name="Description" content="Info about my page">
-    <!-- <link rel="stylesheet" href="/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
