--- a/education/education.html
+++ b/education/education.html
@@ -5,83 +5,62 @@
     <title> My Education</title>
     <meta charset="UTF-8">
     <meta name="Description" content="Info about my page">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js "></script>
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark" id="nav-bar-style" ">
-            <a class="navbar-brand nav-title nav-link " href="index.html ">
-                <p class="nav-title text-white ">J.C.'s Career Page</p>
-            </a>
-        <button class="navbar-toggler " type="button " data-toggle="collapse " data-target="navbarNavDropdown " aria-controls="navbarNavDropdown " aria-expanded="false " aria-label="Toggle navigation ">
-            <span class="navbar-toggler-icon "></span>
-        </button> <!--Navbar Button-->
-
-            <div class="collapse navbar-collapse " id="navbarNavDropdown ">
-                <ul class="navbar-nav ">
-                    <li class="nav-item ">
-                        <a class="nav-link text-white " href="/aboutme.html ">
-                            About Me
-                        </a>
-                    </li>
-                    <!--About Me-->
-
-                    <li class="nav-item dropdown ">
-                        <a class="nav-link dropdown-toggle text-white " href="# " id="EduNavBarDropdownMenuLink " role="button " data-toggle="dropdown " aria-haspopup="true " aria-expanded="false ">
-                            My Education
-                        </a>
-                        <div class="dropdown-menu " aria-labelledby="EduNavBarDropdownMenuLink ">
-                            <a class="dropdown-item " href="# ">San Diego State University</a>
-                            <a class="dropdown-item " href="# ">San Diego Miramar/Mesa College</a>
-                        </div>
-                        <!--Education Options-->
-                    </li>
-                    <!--Education-->
-
-                    <li class="nav-item dropdown text-white ">
-                        <a class="nav-link dropdown-toggle text-white " href="# " id="CarNavBarDropdownMenuLink " role="button " data-toggle="dropdown " aria-haspopup="true " aria-expanded="false ">
-                                My Career
-                            </a>
-                        <div class="dropdown-menu " aria-labelledby="CarNavBarDropdownMenuLink ">
-                            <a class="dropdown-item " href="# ">San Diego State University: IT Division ServiceNow</a>
-                            <a class="dropdown-item " href="# ">San Diego State University: Instructional Technology Services</a>
-                            <a class="dropdown-item " href="# ">Best Buy Mira Mesa</a>
-                        </div>
-                        <!--Career Options-->
-                    </li>
-                    <!--Career-->
-                    <li class="nav-item dropdown ">
-                        <a class="nav-link dropdown-toggle text-white " href="# " id="ProjNavBarDropdownMenuLink " role="button " data-toggle="dropdown " aria-haspopup="true " aria-expanded="false ">
-                                Projects/Additional Studies
-                            </a>
-                        <div class="dropdown-menu " aria-labelledby="ProjNavBarDropdownMenuLink ">
-                            <a class="dropdown-item " href="# ">Github Webpage</a>
-                            <a class="dropdown-item " href="# ">Coursera Courses</a>
-                        </div>
-                        <!--Project Options-->
-                    </li>
-                    <!--Projects-->
-                </ul>
-                <!--Navbar List-->
-            </div>
-        </nav>
-        <!-- End of Navbar-->
-    </header>
-
-    <!--Main Content Box for Landing Page-->
-    <div class="row content-box container container-fluid ">
-        <p class="content-box-text "> Put Education Here </p>
-    </div>
-    <!--Image Box-->
-    <div class="row image-box container container-fluid ">
         <div>
-            <img src=" " class="img-fluid " height=auto max-width="80% " ">
+            <h1>Juan Pina-Sanz</h1>
+            <h2>Bachelor of Computer Science</h2>
+        </div>
+    </header>
+    <div id="nav-placeholder"></div>
+    <div class="main-content">
+        <div class="site-wrap">
+
+            <div class="text-content-box col-md-8">
+                <p>
+                    <h3 class="school-title"><a href="sdsu.html"> San Diego State University</a></h3>
+                    <h3 class="school-degree">Bachelor of Science in Applied Arts and Sciences: Computer Science</h3>
+                    <h3 class="graduating-year">August 2020</h3>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </p>
             </div>
-            <div> Image Caption</div>
+            <!--Text Box-->
+
+            <div class="image-box col-md-4">
+                <img class="edu-catalog-img" src="https://live.staticflickr.com/65535/50588505831_67e8e90269_c.jpg" class="align-right">
             </div>
+            <!--Image Box-->
+
+        </div>
+        <div class="site-wrap">
+
+            <div class="text-content-box col-md-8">
+                <p>
+                    <h3 class="school-title"><a href="miramar_mesa.html">San Diego Miramar/Mesa College</a></h3>
+                    <h3 class="school-degree">Associate of Applied Mathematics</h3>
+                    <h3 class="graduating-year">May 2018</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </p>
+            </div>
+            <!--Text Box-->
+
+            <div class="image-box col-md-4">
+                <img class="edu-catalog-img" src="https://live.staticflickr.com/65535/50587737353_d1aba44d7e_b.jpg" height="90%" width="100%">
+            </div>
+            <!--Image Box-->
+
+        </div>
+    </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js "></script>
+    <script src="/js/pageload-scripts.js "></script>
+    <script src="/js/bootstrap.min.js "></script>
 </body>
 
 </html>
